@@ -1,5 +1,6 @@
 2011-08-16 Nikolay Nemshilov
 
+  * Adding the dark color theme
   * Default stylesheet adjustments
   * FF support fix
   * HTML highlighter fix for empty `SCRIPT` tags
